test_out/cpp_stl_11/make.stderr
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_struct.cpp:18:48: error: no matching constructor for initialization of 'params_pass_struct_t::struct_type_t'
    m_one = std::unique_ptr<struct_type_t>(new struct_type_t(first(), m__io, this, m__root));
                                               ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_struct.h:56:9: note: candidate constructor not viable: no known conversion from 'params_pass_struct_t::block_t *' to 'std::unique_ptr<kaitai::kstruct>' for 1st argument
        struct_type_t(std::unique_ptr<kaitai::kstruct> p_foo, kaitai::kstream* p__io, params_pass_struct_t* p__parent = nullptr, params_pass_struct_t* p__root = nullptr);
        ^
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_struct.h:51:11: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 4 were provided
    class struct_type_t : public kaitai::kstruct {
          ^
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_struct.cpp:40:11: error: overload resolution selected deleted operator '='
    m_foo = p_foo;
    ~~~~~ ^ ~~~~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/unique_ptr.h:274:19: note: candidate function has been explicitly deleted
      unique_ptr& operator=(const unique_ptr&) = delete;
                  ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/unique_ptr.h:190:7: note: candidate function not viable: no known conversion from 'std::unique_ptr<kaitai::kstruct>' to 'std::unique_ptr<kaitai::kstruct, std::default_delete<kaitai::kstruct> > &&' for 1st argument
      operator=(unique_ptr&& __u) noexcept
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/unique_ptr.h:203:2: note: candidate function [with _Up = kaitai::kstruct, _Ep = std::default_delete<kaitai::kstruct>] not viable: no known conversion from 'std::unique_ptr<kaitai::kstruct>' to 'unique_ptr<kaitai::kstruct, std::default_delete<kaitai::kstruct> > &&' for 1st argument
        operator=(unique_ptr<_Up, _Ep>&& __u) noexcept
        ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/unique_ptr.h:211:7: note: candidate function not viable: no known conversion from 'std::unique_ptr<kaitai::kstruct>' to 'std::nullptr_t' (aka 'nullptr_t') for 1st argument
      operator=(nullptr_t) noexcept
      ^
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_struct.cpp:46:40: error: no matching constructor for initialization of 'params_pass_struct_t::struct_type_t::baz_t'
    m_bar = std::unique_ptr<baz_t>(new baz_t(foo(), m__io, this, m__root));
                                       ^     ~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_struct.h:68:13: note: candidate constructor not viable: no known conversion from 'kaitai::kstruct *' to 'std::unique_ptr<kaitai::kstruct>' for 1st argument
            baz_t(std::unique_ptr<kaitai::kstruct> p_foo, kaitai::kstream* p__io, params_pass_struct_t::struct_type_t* p__parent = nullptr, params_pass_struct_t* p__root = nullptr);
            ^
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_struct.h:64:15: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 4 were provided
        class baz_t : public kaitai::kstruct {
              ^
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_struct.cpp:55:11: error: overload resolution selected deleted operator '='
    m_foo = p_foo;
    ~~~~~ ^ ~~~~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/unique_ptr.h:274:19: note: candidate function has been explicitly deleted
      unique_ptr& operator=(const unique_ptr&) = delete;
                  ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/unique_ptr.h:190:7: note: candidate function not viable: no known conversion from 'std::unique_ptr<kaitai::kstruct>' to 'std::unique_ptr<kaitai::kstruct, std::default_delete<kaitai::kstruct> > &&' for 1st argument
      operator=(unique_ptr&& __u) noexcept
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/unique_ptr.h:203:2: note: candidate function [with _Up = kaitai::kstruct, _Ep = std::default_delete<kaitai::kstruct>] not viable: no known conversion from 'std::unique_ptr<kaitai::kstruct>' to 'unique_ptr<kaitai::kstruct, std::default_delete<kaitai::kstruct> > &&' for 1st argument
        operator=(unique_ptr<_Up, _Ep>&& __u) noexcept
        ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/unique_ptr.h:211:7: note: candidate function not viable: no known conversion from 'std::unique_ptr<kaitai::kstruct>' to 'std::nullptr_t' (aka 'nullptr_t') for 1st argument
      operator=(nullptr_t) noexcept
      ^
4 errors generated.
make[2]: *** [CMakeFiles/ks_tests.dir/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_struct.cpp.o] Error 1
In file included from /home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/repeat_until_complex.cpp:3:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/memory:63:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/allocator.h:46:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/x86_64-linux-gnu/c++/4.8/bits/c++allocator.h:33:
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ext/new_allocator.h:120:23: error: call to deleted constructor of 'std::unique_ptr<repeat_until_complex_t::type_u1_t, std::default_delete<repeat_until_complex_t::type_u1_t> >'
        { ::new((void *)__p) _Up(std::forward<_Args>(__args)...); }
                             ^   ~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/alloc_traits.h:254:8: note: in instantiation of function template specialization '__gnu_cxx::new_allocator<std::unique_ptr<repeat_until_complex_t::type_u1_t, std::default_delete<repeat_until_complex_t::type_u1_t> > >::construct<std::unique_ptr<repeat_until_complex_t::type_u1_t, std::default_delete<repeat_until_complex_t::type_u1_t> >, const std::unique_ptr<repeat_until_complex_t::type_u1_t, std::default_delete<repeat_until_complex_t::type_u1_t> > &>' requested here
        { __a.construct(__p, std::forward<_Args>(__args)...); }
              ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/alloc_traits.h:393:4: note: in instantiation of function template specialization 'std::allocator_traits<std::allocator<std::unique_ptr<repeat_until_complex_t::type_u1_t, std::default_delete<repeat_until_complex_t::type_u1_t> > > >::_S_construct<std::unique_ptr<repeat_until_complex_t::type_u1_t, std::default_delete<repeat_until_complex_t::type_u1_t> >, const std::unique_ptr<repeat_until_complex_t::type_u1_t, std::default_delete<repeat_until_complex_t::type_u1_t> > &>' requested here
        { _S_construct(__a, __p, std::forward<_Args>(__args)...); }
          ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_vector.h:905:21: note: in instantiation of function template specialization 'std::allocator_traits<std::allocator<std::unique_ptr<repeat_until_complex_t::type_u1_t, std::default_delete<repeat_until_complex_t::type_u1_t> > > >::construct<std::unique_ptr<repeat_until_complex_t::type_u1_t, std::default_delete<repeat_until_complex_t::type_u1_t> >, const std::unique_ptr<repeat_until_complex_t::type_u1_t, std::default_delete<repeat_until_complex_t::type_u1_t> > &>' requested here
            _Alloc_traits::construct(this->_M_impl, this->_M_impl._M_finish,
                           ^
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/repeat_until_complex.cpp:24:22: note: in instantiation of member function 'std::vector<std::unique_ptr<repeat_until_complex_t::type_u1_t, std::default_delete<repeat_until_complex_t::type_u1_t> >, std::allocator<std::unique_ptr<repeat_until_complex_t::type_u1_t, std::default_delete<repeat_until_complex_t::type_u1_t> > > >::push_back' requested here
            m_first->push_back(_);
                     ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/unique_ptr.h:273:7: note: 'unique_ptr' has been explicitly marked deleted here
      unique_ptr(const unique_ptr&) = delete;
      ^
In file included from /home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/repeat_until_complex.cpp:3:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/memory:63:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/allocator.h:46:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/x86_64-linux-gnu/c++/4.8/bits/c++allocator.h:33:
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ext/new_allocator.h:120:23: error: call to deleted constructor of 'std::unique_ptr<repeat_until_complex_t::type_u2_t, std::default_delete<repeat_until_complex_t::type_u2_t> >'
        { ::new((void *)__p) _Up(std::forward<_Args>(__args)...); }
                             ^   ~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/alloc_traits.h:254:8: note: in instantiation of function template specialization '__gnu_cxx::new_allocator<std::unique_ptr<repeat_until_complex_t::type_u2_t, std::default_delete<repeat_until_complex_t::type_u2_t> > >::construct<std::unique_ptr<repeat_until_complex_t::type_u2_t, std::default_delete<repeat_until_complex_t::type_u2_t> >, const std::unique_ptr<repeat_until_complex_t::type_u2_t, std::default_delete<repeat_until_complex_t::type_u2_t> > &>' requested here
        { __a.construct(__p, std::forward<_Args>(__args)...); }
              ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/alloc_traits.h:393:4: note: in instantiation of function template specialization 'std::allocator_traits<std::allocator<std::unique_ptr<repeat_until_complex_t::type_u2_t, std::default_delete<repeat_until_complex_t::type_u2_t> > > >::_S_construct<std::unique_ptr<repeat_until_complex_t::type_u2_t, std::default_delete<repeat_until_complex_t::type_u2_t> >, const std::unique_ptr<repeat_until_complex_t::type_u2_t, std::default_delete<repeat_until_complex_t::type_u2_t> > &>' requested here
        { _S_construct(__a, __p, std::forward<_Args>(__args)...); }
          ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_vector.h:905:21: note: in instantiation of function template specialization 'std::allocator_traits<std::allocator<std::unique_ptr<repeat_until_complex_t::type_u2_t, std::default_delete<repeat_until_complex_t::type_u2_t> > > >::construct<std::unique_ptr<repeat_until_complex_t::type_u2_t, std::default_delete<repeat_until_complex_t::type_u2_t> >, const std::unique_ptr<repeat_until_complex_t::type_u2_t, std::default_delete<repeat_until_complex_t::type_u2_t> > &>' requested here
            _Alloc_traits::construct(this->_M_impl, this->_M_impl._M_finish,
                           ^
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/repeat_until_complex.cpp:34:23: note: in instantiation of member function 'std::vector<std::unique_ptr<repeat_until_complex_t::type_u2_t, std::default_delete<repeat_until_complex_t::type_u2_t> >, std::allocator<std::unique_ptr<repeat_until_complex_t::type_u2_t, std::default_delete<repeat_until_complex_t::type_u2_t> > > >::push_back' requested here
            m_second->push_back(_);
                      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/unique_ptr.h:273:7: note: 'unique_ptr' has been explicitly marked deleted here
      unique_ptr(const unique_ptr&) = delete;
      ^
2 errors generated.
make[2]: *** [CMakeFiles/ks_tests.dir/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/repeat_until_complex.cpp.o] Error 1
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/yaml_ints.cpp:43:21: warning: implicit conversion from 'unsigned long long' to 'int32_t' (aka 'int') changes value from 18446744073709551615 to -1 [-Wconstant-conversion]
    m_test_u8_dec = 18446744073709551615ULL;
                  ~ ^~~~~~~~~~~~~~~~~~~~~~~
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/yaml_ints.cpp:51:21: warning: implicit conversion from 'unsigned long long' to 'int32_t' (aka 'int') changes value from 18446744073709551615 to -1 [-Wconstant-conversion]
    m_test_u8_hex = 18446744073709551615ULL;
                  ~ ^~~~~~~~~~~~~~~~~~~~~~~
2 warnings generated.
In file included from /home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_integers2.cpp:4:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_integers2.h:55:40: error: member reference base type 'const uint64_t' (aka 'const unsigned long') is not a structure or union
    uint64_t len() const { return m_len.get(); }
                                  ~~~~~^~~~
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_integers2.cpp.o] Error 1
In file included from /home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_integers.cpp:4:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_integers.h:54:46: error: member reference base type 'const uint64_t' (aka 'const unsigned long') is not a structure or union
        uint64_t body() const { return m_body.get(); }
                                       ~~~~~~^~~~
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_integers.cpp.o] Error 1
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_usertype.cpp:18:47: error: no matching constructor for initialization of 'params_pass_usertype_t::param_type_t'
    m_one = std::unique_ptr<param_type_t>(new param_type_t(first(), m__io, this, m__root));
                                              ^            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_usertype.h:55:9: note: candidate constructor not viable: no known conversion from 'params_pass_usertype_t::block_t *' to 'std::unique_ptr<block_t>' for 1st argument
        param_type_t(std::unique_ptr<block_t> p_foo, kaitai::kstream* p__io, params_pass_usertype_t* p__parent = nullptr, params_pass_usertype_t* p__root = nullptr);
        ^
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_usertype.h:51:11: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 4 were provided
    class param_type_t : public kaitai::kstruct {
          ^
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_usertype.cpp:40:11: error: overload resolution selected deleted operator '='
    m_foo = p_foo;
    ~~~~~ ^ ~~~~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/unique_ptr.h:274:19: note: candidate function has been explicitly deleted
      unique_ptr& operator=(const unique_ptr&) = delete;
                  ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/unique_ptr.h:190:7: note: candidate function not viable: no known conversion from 'std::unique_ptr<block_t>' to 'std::unique_ptr<params_pass_usertype_t::block_t, std::default_delete<params_pass_usertype_t::block_t> > &&' for 1st argument
      operator=(unique_ptr&& __u) noexcept
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/unique_ptr.h:203:2: note: candidate function [with _Up = params_pass_usertype_t::block_t, _Ep = std::default_delete<params_pass_usertype_t::block_t>] not viable: no known conversion from 'std::unique_ptr<block_t>' to 'unique_ptr<params_pass_usertype_t::block_t, std::default_delete<params_pass_usertype_t::block_t> > &&' for 1st argument
        operator=(unique_ptr<_Up, _Ep>&& __u) noexcept
        ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/unique_ptr.h:211:7: note: candidate function not viable: no known conversion from 'std::unique_ptr<block_t>' to 'std::nullptr_t' (aka 'nullptr_t') for 1st argument
      operator=(nullptr_t) noexcept
      ^
2 errors generated.
make[2]: *** [CMakeFiles/ks_tests.dir/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_usertype.cpp.o] Error 1
In file included from /home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/non_standard.cpp:4:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/non_standard.h:54:40: error: member reference base type 'const uint32_t' (aka 'const unsigned int') is not a structure or union
    uint32_t bar() const { return m_bar.get(); }
                                  ~~~~~^~~~
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/non_standard.cpp.o] Error 1
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/vlq_base128_le.cpp:75:335: warning: shift count >= width of type [-Wshift-count-overflow]
    m_value = (((((((groups()->at(0)->value() + ((len() >= 2) ? ((groups()->at(1)->value() << 7)) : (0))) + ((len() >= 3) ? ((groups()->at(2)->value() << 14)) : (0))) + ((len() >= 4) ? ((groups()->at(3)->value() << 21)) : (0))) + ((len() >= 5) ? ((groups()->at(4)->value() << 28)) : (0))) + ((len() >= 6) ? ((groups()->at(5)->value() << 35)) : (0))) + ((len() >= 7) ? ((groups()->at(6)->value() << 42)) : (0))) + ((len() >= 8) ? ((groups()->at(7)->value() << 49)) : (0)));
                                                                                                                                                                                                                                                                                                                                              ^  ~~
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/vlq_base128_le.cpp:75:396: warning: shift count >= width of type [-Wshift-count-overflow]
    m_value = (((((((groups()->at(0)->value() + ((len() >= 2) ? ((groups()->at(1)->value() << 7)) : (0))) + ((len() >= 3) ? ((groups()->at(2)->value() << 14)) : (0))) + ((len() >= 4) ? ((groups()->at(3)->value() << 21)) : (0))) + ((len() >= 5) ? ((groups()->at(4)->value() << 28)) : (0))) + ((len() >= 6) ? ((groups()->at(5)->value() << 35)) : (0))) + ((len() >= 7) ? ((groups()->at(6)->value() << 42)) : (0))) + ((len() >= 8) ? ((groups()->at(7)->value() << 49)) : (0)));
                                                                                                                                                                                                                                                                                                                                                                                                           ^  ~~
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/vlq_base128_le.cpp:75:457: warning: shift count >= width of type [-Wshift-count-overflow]
    m_value = (((((((groups()->at(0)->value() + ((len() >= 2) ? ((groups()->at(1)->value() << 7)) : (0))) + ((len() >= 3) ? ((groups()->at(2)->value() << 14)) : (0))) + ((len() >= 4) ? ((groups()->at(3)->value() << 21)) : (0))) + ((len() >= 5) ? ((groups()->at(4)->value() << 28)) : (0))) + ((len() >= 6) ? ((groups()->at(5)->value() << 35)) : (0))) + ((len() >= 7) ? ((groups()->at(6)->value() << 42)) : (0))) + ((len() >= 8) ? ((groups()->at(7)->value() << 49)) : (0)));
                                                                                                                                                                                                                                                                                                                                                                                                                                                                        ^  ~~
In file included from /home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/vlq_base128_le.cpp:3:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/memory:63:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/allocator.h:46:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/x86_64-linux-gnu/c++/4.8/bits/c++allocator.h:33:
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ext/new_allocator.h:120:23: error: call to deleted constructor of 'std::unique_ptr<vlq_base128_le_t::group_t, std::default_delete<vlq_base128_le_t::group_t> >'
        { ::new((void *)__p) _Up(std::forward<_Args>(__args)...); }
                             ^   ~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/alloc_traits.h:254:8: note: in instantiation of function template specialization '__gnu_cxx::new_allocator<std::unique_ptr<vlq_base128_le_t::group_t, std::default_delete<vlq_base128_le_t::group_t> > >::construct<std::unique_ptr<vlq_base128_le_t::group_t, std::default_delete<vlq_base128_le_t::group_t> >, const std::unique_ptr<vlq_base128_le_t::group_t, std::default_delete<vlq_base128_le_t::group_t> > &>' requested here
        { __a.construct(__p, std::forward<_Args>(__args)...); }
              ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/alloc_traits.h:393:4: note: in instantiation of function template specialization 'std::allocator_traits<std::allocator<std::unique_ptr<vlq_base128_le_t::group_t, std::default_delete<vlq_base128_le_t::group_t> > > >::_S_construct<std::unique_ptr<vlq_base128_le_t::group_t, std::default_delete<vlq_base128_le_t::group_t> >, const std::unique_ptr<vlq_base128_le_t::group_t, std::default_delete<vlq_base128_le_t::group_t> > &>' requested here
        { _S_construct(__a, __p, std::forward<_Args>(__args)...); }
          ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_vector.h:905:21: note: in instantiation of function template specialization 'std::allocator_traits<std::allocator<std::unique_ptr<vlq_base128_le_t::group_t, std::default_delete<vlq_base128_le_t::group_t> > > >::construct<std::unique_ptr<vlq_base128_le_t::group_t, std::default_delete<vlq_base128_le_t::group_t> >, const std::unique_ptr<vlq_base128_le_t::group_t, std::default_delete<vlq_base128_le_t::group_t> > &>' requested here
            _Alloc_traits::construct(this->_M_impl, this->_M_impl._M_finish,
                           ^
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/vlq_base128_le.cpp:24:23: note: in instantiation of member function 'std::vector<std::unique_ptr<vlq_base128_le_t::group_t, std::default_delete<vlq_base128_le_t::group_t> >, std::allocator<std::unique_ptr<vlq_base128_le_t::group_t, std::default_delete<vlq_base128_le_t::group_t> > > >::push_back' requested here
            m_groups->push_back(_);
                      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/unique_ptr.h:273:7: note: 'unique_ptr' has been explicitly marked deleted here
      unique_ptr(const unique_ptr&) = delete;
      ^
3 warnings and 1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/vlq_base128_le.cpp.o] Error 1
In file included from /home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/repeat_until_sized.cpp:3:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/memory:63:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/allocator.h:46:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/x86_64-linux-gnu/c++/4.8/bits/c++allocator.h:33:
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ext/new_allocator.h:120:23: error: call to deleted constructor of 'std::unique_ptr<repeat_until_sized_t::record_t, std::default_delete<repeat_until_sized_t::record_t> >'
        { ::new((void *)__p) _Up(std::forward<_Args>(__args)...); }
                             ^   ~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/alloc_traits.h:254:8: note: in instantiation of function template specialization '__gnu_cxx::new_allocator<std::unique_ptr<repeat_until_sized_t::record_t, std::default_delete<repeat_until_sized_t::record_t> > >::construct<std::unique_ptr<repeat_until_sized_t::record_t, std::default_delete<repeat_until_sized_t::record_t> >, const std::unique_ptr<repeat_until_sized_t::record_t, std::default_delete<repeat_until_sized_t::record_t> > &>' requested here
        { __a.construct(__p, std::forward<_Args>(__args)...); }
              ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/alloc_traits.h:393:4: note: in instantiation of function template specialization 'std::allocator_traits<std::allocator<std::unique_ptr<repeat_until_sized_t::record_t, std::default_delete<repeat_until_sized_t::record_t> > > >::_S_construct<std::unique_ptr<repeat_until_sized_t::record_t, std::default_delete<repeat_until_sized_t::record_t> >, const std::unique_ptr<repeat_until_sized_t::record_t, std::default_delete<repeat_until_sized_t::record_t> > &>' requested here
        { _S_construct(__a, __p, std::forward<_Args>(__args)...); }
          ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_vector.h:905:21: note: in instantiation of function template specialization 'std::allocator_traits<std::allocator<std::unique_ptr<repeat_until_sized_t::record_t, std::default_delete<repeat_until_sized_t::record_t> > > >::construct<std::unique_ptr<repeat_until_sized_t::record_t, std::default_delete<repeat_until_sized_t::record_t> >, const std::unique_ptr<repeat_until_sized_t::record_t, std::default_delete<repeat_until_sized_t::record_t> > &>' requested here
            _Alloc_traits::construct(this->_M_impl, this->_M_impl._M_finish,
                           ^
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/repeat_until_sized.cpp:30:24: note: in instantiation of member function 'std::vector<std::unique_ptr<repeat_until_sized_t::record_t, std::default_delete<repeat_until_sized_t::record_t> >, std::allocator<std::unique_ptr<repeat_until_sized_t::record_t, std::default_delete<repeat_until_sized_t::record_t> > > >::push_back' requested here
            m_records->push_back(_);
                       ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/unique_ptr.h:273:7: note: 'unique_ptr' has been explicitly marked deleted here
      unique_ptr(const unique_ptr&) = delete;
      ^
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/repeat_until_sized.cpp.o] Error 1
In file included from /home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/index_to_param_until.cpp:3:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/memory:63:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/allocator.h:46:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/x86_64-linux-gnu/c++/4.8/bits/c++allocator.h:33:
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ext/new_allocator.h:120:23: error: call to deleted constructor of 'std::unique_ptr<index_to_param_until_t::block_t, std::default_delete<index_to_param_until_t::block_t> >'
        { ::new((void *)__p) _Up(std::forward<_Args>(__args)...); }
                             ^   ~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/alloc_traits.h:254:8: note: in instantiation of function template specialization '__gnu_cxx::new_allocator<std::unique_ptr<index_to_param_until_t::block_t, std::default_delete<index_to_param_until_t::block_t> > >::construct<std::unique_ptr<index_to_param_until_t::block_t, std::default_delete<index_to_param_until_t::block_t> >, const std::unique_ptr<index_to_param_until_t::block_t, std::default_delete<index_to_param_until_t::block_t> > &>' requested here
        { __a.construct(__p, std::forward<_Args>(__args)...); }
              ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/alloc_traits.h:393:4: note: in instantiation of function template specialization 'std::allocator_traits<std::allocator<std::unique_ptr<index_to_param_until_t::block_t, std::default_delete<index_to_param_until_t::block_t> > > >::_S_construct<std::unique_ptr<index_to_param_until_t::block_t, std::default_delete<index_to_param_until_t::block_t> >, const std::unique_ptr<index_to_param_until_t::block_t, std::default_delete<index_to_param_until_t::block_t> > &>' requested here
        { _S_construct(__a, __p, std::forward<_Args>(__args)...); }
          ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_vector.h:905:21: note: in instantiation of function template specialization 'std::allocator_traits<std::allocator<std::unique_ptr<index_to_param_until_t::block_t, std::default_delete<index_to_param_until_t::block_t> > > >::construct<std::unique_ptr<index_to_param_until_t::block_t, std::default_delete<index_to_param_until_t::block_t> >, const std::unique_ptr<index_to_param_until_t::block_t, std::default_delete<index_to_param_until_t::block_t> > &>' requested here
            _Alloc_traits::construct(this->_M_impl, this->_M_impl._M_finish,
                           ^
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/index_to_param_until.cpp:30:23: note: in instantiation of member function 'std::vector<std::unique_ptr<index_to_param_until_t::block_t, std::default_delete<index_to_param_until_t::block_t> >, std::allocator<std::unique_ptr<index_to_param_until_t::block_t, std::default_delete<index_to_param_until_t::block_t> > > >::push_back' requested here
            m_blocks->push_back(_);
                      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/unique_ptr.h:273:7: note: 'unique_ptr' has been explicitly marked deleted here
      unique_ptr(const unique_ptr&) = delete;
      ^
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/index_to_param_until.cpp.o] Error 1
In file included from /home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_multi_bool_ops.cpp:4:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_multi_bool_ops.h:54:46: error: member reference base type 'const uint64_t' (aka 'const unsigned long') is not a structure or union
        uint64_t body() const { return m_body.get(); }
                                       ~~~~~~^~~~
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_multi_bool_ops.cpp.o] Error 1
/home/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_cast_nested.cpp:4:10: fatal error: 'cast_nested.h' file not found
#include <cast_nested.h>
         ^~~~~~~~~~~~~~~
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/test_cast_nested.cpp.o] Error 1
In file included from /home/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_non_standard.cpp:4:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/non_standard.h:54:40: error: member reference base type 'const uint32_t' (aka 'const unsigned int') is not a structure or union
    uint32_t bar() const { return m_bar.get(); }
                                  ~~~~~^~~~
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/test_non_standard.cpp.o] Error 1
In file included from /home/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_switch_integers.cpp:4:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_integers.h:54:46: error: member reference base type 'const uint64_t' (aka 'const unsigned long') is not a structure or union
        uint64_t body() const { return m_body.get(); }
                                       ~~~~~~^~~~
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/test_switch_integers.cpp.o] Error 1
In file included from /home/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_switch_integers2.cpp:4:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_integers2.h:55:40: error: member reference base type 'const uint64_t' (aka 'const unsigned long') is not a structure or union
    uint64_t len() const { return m_len.get(); }
                                  ~~~~~^~~~
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/test_switch_integers2.cpp.o] Error 1
/home/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_switch_cast.cpp:3:10: fatal error: 'switch_cast.h' file not found
#include <switch_cast.h>
         ^~~~~~~~~~~~~~~
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/test_switch_cast.cpp.o] Error 1
/home/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_switch_repeat_expr.cpp:16:24: error: cannot cast from type '__gnu_cxx::__alloc_traits<std::allocator<std::unique_ptr<kaitai::kstruct, std::default_delete<kaitai::kstruct> > > >::value_type' (aka 'std::unique_ptr<kaitai::kstruct, std::default_delete<kaitai::kstruct> >') to pointer type 'switch_repeat_expr_t::one_t *'
    BOOST_CHECK_EQUAL((static_cast<switch_repeat_expr_t::one_t*>(r->body()->at(0)))->first(), std::string("Stuff\0Me\0", 9));
                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/boost/test/test_tools.hpp:169:109: note: expanded from macro 'BOOST_CHECK_EQUAL'
    BOOST_CHECK_WITH_ARGS_IMPL( ::boost::test_tools::tt_detail::equal_impl_frwd(), "", CHECK, CHECK_EQUAL, (L)(R) )
                                                                                                            ^
/usr/include/boost/test/test_tools.hpp:103:59: note: expanded from macro 'BOOST_CHECK_WITH_ARGS_IMPL'
    BOOST_PP_SEQ_FOR_EACH( BOOST_TEST_PASS_ARG_INFO, '_', ARGS ) ); \
                                                          ^~~~
/usr/include/boost/preprocessor/seq/for_each.hpp:26:80: note: expanded from macro 'BOOST_PP_SEQ_FOR_EACH'
#    define BOOST_PP_SEQ_FOR_EACH(macro, data, seq) BOOST_PP_FOR((macro, data, seq (nil)), BOOST_PP_SEQ_FOR_EACH_P, BOOST_PP_SEQ_FOR_EACH_O, BOOST_PP_SEQ_FOR_EACH_M)
                                                                               ^~~
note: (skipping 10 expansions in backtrace; use -fmacro-backtrace-limit=0 to see all)
/usr/include/boost/preprocessor/seq/elem.hpp:43:60: note: expanded from macro 'BOOST_PP_SEQ_ELEM_II'
#    define BOOST_PP_SEQ_ELEM_II(im) BOOST_PP_SEQ_ELEM_III(im)
                                                           ^~
/usr/include/boost/preprocessor/seq/elem.hpp:44:41: note: expanded from macro 'BOOST_PP_SEQ_ELEM_III'
#    define BOOST_PP_SEQ_ELEM_III(x, _) x
                                        ^
/usr/include/boost/test/test_tools.hpp:97:52: note: expanded from macro 'BOOST_TEST_PASS_ARG_INFO'
#define BOOST_TEST_PASS_ARG_INFO( r, data, arg ) , arg, BOOST_STRINGIZE( arg )
                                                   ^~~
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/test_switch_repeat_expr.cpp.o] Error 1
/home/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_cast_to_imported.cpp:3:10: fatal error: 'cast_to_imported.h' file not found
#include <cast_to_imported.h>
         ^~~~~~~~~~~~~~~~~~~~
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/test_cast_to_imported.cpp.o] Error 1
/home/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_process_coerce_switch.cpp:4:10: fatal error: 'process_coerce_switch.h' file not found
#include <process_coerce_switch.h>
         ^~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/test_process_coerce_switch.cpp.o] Error 1
In file included from /home/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_switch_multi_bool_ops.cpp:3:
/home/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_multi_bool_ops.h:54:46: error: member reference base type 'const uint64_t' (aka 'const unsigned long') is not a structure or union
        uint64_t body() const { return m_body.get(); }
                                       ~~~~~~^~~~
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/test_switch_multi_bool_ops.cpp.o] Error 1
/home/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_cast_to_top.cpp:4:10: fatal error: 'cast_to_top.h' file not found
#include <cast_to_top.h>
         ^~~~~~~~~~~~~~~
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/test_cast_to_top.cpp.o] Error 1
make[2]: Target `CMakeFiles/ks_tests.dir/build' not remade because of errors.
make[1]: *** [CMakeFiles/ks_tests.dir/all] Error 2
make[1]: Target `all' not remade because of errors.
make: *** [all] Error 2
make: Target `default_target' not remade because of errors.
